src/assets/styles/pages/Dashboard.scss
.dashboard {
    display: grid;
    grid-template-columns: 1fr 5.3125rem 3fr;
    padding-block: 1.25rem;

    * {
        box-sizing: border-box;
    }


    .user-overview {

        .dashboard-mini-user {
            margin-bottom: 1rem;
            padding: 1.5rem 1rem;
            border: 1px solid $textclr7;
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: center;
            color: $textclr3;
            gap: 0.5rem;

            .header-user-options-btn {
                border-radius: 50%;
                height: 5rem;
                width: 5rem;
                overflow: hidden;
            }
         
            a {
                display: flex;
                flex-direction: column;
                justify-content: center;
                align-items: center;

                p {
                    margin: 0;

                    &:nth-child(1) {
                        font-weight: 700;
                        font-size: 1.125rem;
                    }

                    &:nth-child(2) {
                        font-size: 0.875rem;
                    }
                }
            }
        }

        button {
            width: 100%;
            background-color: $transparent;
            border: 1px solid $textclr7;
            border-radius: 0.5rem;
            padding: 0.5rem 1rem;
            font-family: Macan;
            line-height: 1.5rem;

            &:hover {
                background-color: $backhover;
            }
        }

        .dashboard-level-overview {
            margin-bottom: 1rem;
            padding: 1.5rem 1rem;
            border: 1px solid $textclr7;
            display: flex;
            flex-direction: column;
            color: $textclr3;
            gap: 1.5rem;

            a {
                font-size: 1.125rem;
                font-weight: 700;
            }

            .dashboard-level-details {
                gap: 0.5rem;
                display: flex;
                flex-direction: column;

                div {
                    display: flex;
                    justify-content: space-between;

                    p {
                        margin: 0;

                        &:nth-child(1) {
                            color: $textclr4;
                        }

                        &:nth-child(2) {
                            display: flex;
                            align-items: center;
                        }
                    }
                }
            }

        }

        .monthly-earnings {
            padding: 1.5rem 1rem;
            border: 1px solid $textclr7;
            display: flex;
            justify-content: space-between;

            p {
                margin: 0;
            }
        }

    }

    .dashboard-orders {
        grid-column: 3;

        .dashboard-welcome-message {
            font-size: 1.5rem;
            font-weight: 700;
            margin: 0;
            line-height: 130%;
            margin-bottom: 1rem;
        }

        .active-orders {
            display: flex;
            align-items: center;
            justify-content: space-between;
            box-shadow: 0 2px 3px -2px rgba(0, 0, 0, .15);
            border: 1px solid $borderclr1;
            margin-bottom: 1rem;
            padding: 0.75rem;

            p {
                font-weight: 800;
                font-size: 1.125rem;
                margin: 0;

                a {
                    color: $textclr10;
                }
            }

            span {
                color: $textclr1;
                border-radius: 0.25rem;
                border: 1px solid $textclr5;
                padding: 0.5rem 0.75rem;
                transition: all 0.2s ease-in-out;
                display: flex;
                align-items: center;

                &:hover {
                    cursor: pointer;
                    border: 1px solid $textclr10;
                }

                span {
                    display: inline-block;
                    border: none;
                    transform: rotate(180deg);
                    padding: 0 0.5rem 0 0;
                }
            }
        }

        .order-list-wrapper {

            .dashboard-order {
                border: 1px solid $borderclr1;
                display: grid;
                grid-template-columns: 1fr auto auto auto auto;
                padding: 1rem 1.5rem;
                margin-bottom: 1rem;
                min-height: 6rem;
                gap: 6rem;


                span {
                    position: relative;
                    display: flex;
                    align-items: center;

                    &:nth-child(1) {
                        display: flex;
                        align-items: center;

                        img {
                            margin-right: 1rem;

                            &:nth-child(1) {
                                height: 3rem;
                            }

                            &:nth-child(2) {
                                height: 2rem;
                                aspect-ratio: 1/1;
                                border-radius: 50%;
                            }
                        }

                        p {
                            margin: 0;
                            font-size: 0.75rem;
                        }
                    }

                    &:nth-child(2),
                    &:nth-child(3),
                    &:nth-child(4) {
                        flex-direction: column;
                        justify-content: center;

                        p {
                            font-size: 0.875rem;
                            margin: 0;

                            &:nth-child(1) {
                                color: $textclr10;
                            }

                            &:nth-child(2) {
                                color: $textclr4;

                                &.late-on-delivery {
                                    color: red;
                                    display: flex;
                                    align-items: center;

                                    svg {
                                        fill: red;
                                        padding-right: 0.2rem;
                                        margin-bottom: 0.2rem;
                                    }
                                }
                            }
                        }
                    }

                    &:nth-child(4) {

                        p {
                            text-align: center;

                            &:nth-child(2) {
                                padding-inline: 0.5rem;
                                border-radius: 1.5rem;
                                color: $textclrwhite;

                                &:hover {
                                    cursor: pointer;
                                }

                                &.status-confirmed {
                                    background-color: $textclr8;
                                }

                                &.status-canceled {
                                    background-color: $textclr3;
                                }

                                &.status-pending {
                                    background-color: red;
                                }
                            }
                        }
                    }

                    &:nth-child(5) {
                        color: $textclr8;

                        &:hover {
                            cursor: pointer;
                        }
                    }

                    .order-status-modal {
                        position: absolute;
                        display: flex;
                        z-index: 99;
                        top: -30%;
                        left: 120%;

                        .modal {
                            background: $textclrwhite;
                            border-radius: 0.5rem;
                            padding: 1rem 1rem;
                            border: 1px solid $borderprofile;
                            min-width: 9rem;
                            max-width: 90vw;
                        }

                        .modal-actions {
                            display: flex;
                            flex-direction: column;
                            gap: 1rem;
                            justify-content: center;

                            button {
                                padding: 0.5rem 0.75rem;
                                border: none;
                                border-radius: 0.5rem;
                                cursor: pointer;
                                color: $textclrwhite;
                                background-color: red;

                                &:first-of-type {
                                    background-color: $textclr8;
                                }

                                &:hover {
                                    opacity: 0.9;
                                }
                            }
                        }

                        .tip {
                            position: relative;

                            &::after {
                                @include tooltip-pointer(#fff, left, rem(16px), (-844%, -110%), 1px solid #ccc);
                                z-index: 100;
                            }
                        }
                    }
                }
            }
        }
    }
}

